# HaskellMarketPriceFixer

./: .project  README.md
HaskellMarketPriceFixer/: .project  HaskellMarketPriceFixer.cabal
HaskellMarketPriceFixer/src/: .DataType.hs.swp  DataType.hs  DataTypes.hs  Helper.hs  Main.hs  Markets.hs  Milestone2.hs  OldWork.hs  PFixer.hs  PFixerMultGoodDimMargUtil.hs  PFixerMultGoods.hs  PFixerSingleGood.hs  PriceMonads.hs  RandomM.hs  TestCode.hs  TupleOps.hs  milestone2.hs
