name:           HaskellMarketPriceFixer
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jacobluber

executable HaskellMarketPriceFixer
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   DataType,
                   Milestone2,
                   OldWork,
                   TupleOps

